# labs

./: CMakeLists.txt  README.md  command_parser.cpp  command_parser.h  file_info.cpp  file_info.h  file_model.cpp  file_model.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  parser_exceptions.h  test_file_model.cpp
lab3/model/: File.cpp
lab3/tests/: test_model.cpp
